--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://portfolio-beta-coral.vercel.app/assets/favicon.6305aab0.svg" />
     <meta name="description" content="Portfolio de Diseñador y Desarrollador Frontend - Jose Vicente Ordaz Suay">
-    <meta property="og:image" content="./jose-ordaz.jpg">
+    <meta property="og:image" content="https://portfolio-beta-coral.vercel.app/jose-ordaz.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <title>Jose Ordaz - Desarrollador Web</title>
