--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://portfolio-beta-coral.vercel.app/assets/favicon.6305aab0.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.svg" />
     <meta name="description" content="Portfolio de Diseñador y Desarrollador Frontend - Jose Vicente Ordaz Suay">
     <meta property="og:image" content="https://portfolio-beta-coral.vercel.app/jose-ordaz.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
