--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <title>Jose Ordaz - Desarrollador Web</title>
   </head>
-  <body class="bg-gray-50 min-h-screen">
+  <body className="bg-gray-50 min-h-screen">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   <script>
